updates from feedback; added email contact

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate<br>UMass Amherst</span>
+              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
@@ -70,26 +70,36 @@ https://templatemo.com/tm-531-reflux
             <span
               >
               <p>Welcome! My name is Sophia. I started my astronomy career as a physics major in
-              college. I loved quantum mechanics, thermodynamics, and statistics. When I first
+              college. I loved quantum mechanics, thermodynamics, and statistics in part because
+              of their probabilistic approach to understanding systems, ensembles, and particles.
+              When I first
               got to see a rest-frame optical AGN emission spectrum as an undergrad, I asked
               question after question about emission mechanisms, line profiles, and nebular
-              astrophysics. My curiosity was, and still is, insatiable. I had to learn more.</p>
+              astrophysics. I enjoy the intersection of so many branches of physics in a context
+              where a holistic understanding is necessary to interpret what we observe in nebulae
+              and in other galaxies. </p>
 
-              <p>The Journey was not easy. I tried three separate times to get into an astronomy
+              <p>Getting from there to here was not easy. I tried three separate
+              times to get into an astronomy
               PhD program before I was waitlisted at UMass. I did a Master's program, worked
               in planetary science, and wrote my first publication in my efforts to progress
               to the next level. I discovered many barriers to entry for people like me --
-              transgender, mental health, socioeconomic. As a result, I have developed a deep
-              empathy for others and an active dedication to diversity, equity, and belonging.</p>
+              transgender, struggling with mental health, socioeconomically disadvantaged.
+              As a result, I have developed a deep
+              empathy for others and an active dedication to representation (diversity), to
+              meeting others where they are (equity), and
+              to ensuring everyone feels that they belong in our community (inclusion).</p>
 
               <p>My PhD experience was heavily impacted by the COVID19 pandemic. Courses and
               research were fully remote, which forced me to develop my independence as a
               worker, thinker, researcher, and scientist far earlier than otherwise might have
               been expected. But my work with mentors and collaborators has opened up the wider
-              astronomical community to me. I have grown not just in my technical prowess but
-              also in my appreciation for the bigger picture, the global scope of our small field.</p>
-              </span
-            >
+              astronomical community to me. Through these international connections, I have
+              learned the power of cooperation over competition and the importance of
+              forging long-term relationships with collaborators. While I am passionate about
+              investigating the nature of line-emitting galaxies, I have come to love
+              astronomy as a community of delightfully human scientists.</p>
+              </span>
           </div>
           <div class="line-dec"></div>
             <h2>Some Non-Astronomy Interests</h2>
