--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate<br>UMass Amherst</span>
+              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
