--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate<br>UMass Amherst</span>
+              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
@@ -77,9 +77,9 @@ https://templatemo.com/tm-531-reflux
               (z<0.5) galaxies. Much of my analysis incorporates nebular diagnostics,
               photoionization models, and stellar population synthesis to infer fundamental
               properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
-              other galaxies. Currently, I work with faculty at
-              multiple institutions, which has given me the opportunity for extensive
-              collaboration with astronomers across the world.<br><br>Below, you can read about some
+              other galaxies. I collaborate with astronomers across the world, as a part of the
+              LzLCS team but also through connections made at international conferences and
+              (soon) the VANDELS team.<br><br>Below, you can read about some
               specific projects on which I am actively working. A list of my recent publications
               can be found on the <a href=https://ui.adsabs.harvard.edu/search/q=docs(library%2F4YGg7Pm5TVOXW659qG2YPw)&sort=date%20desc%2C%20bibcode%20desc&p_=0>NASA ADS/ABS</a>
               </span
@@ -103,10 +103,12 @@ https://templatemo.com/tm-531-reflux
                     <a href="https://archive.stsci.edu/proposal_search.php?mission=hst&id=15626">GO 15626</a>) and optical spectroscopy with
                     SDSS to investigate the production and escape of ionizing photons in z~0.3
                     low-mass star-forming galaxies. The LzLCS has fundamentally changed our
-                    understanding of the origins of cosmic reionization by providing a foundational
-                    reference sample spanning a very wide parameter space, allowing us to test Lyman
-                    continuum diagnostics (like O32 as shown on the left) and to investigate the
-                    underlying mechanisms of ionizing photon escape.
+                    understanding of Lyman continuum escape by providing a foundational
+                    reference sample spanning a very wide parameter space, allowing us to
+                    <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...930..126F/abstract">test Lyman
+                    continuum diagnostics (like O32 as shown on the left)</a> and to investigate the
+                    underlying mechanisms of ionizing photon escape. These results are critical to
+                    providing empirical constraints on the origins and mechanisms of cosmic Reionization.
                   </p>
                 </div>
               </div>
@@ -123,9 +125,13 @@ https://templatemo.com/tm-531-reflux
                     star formation, and their host galaxies by analyzing the nebular emission line
                     properties, including flux ratio diagnostics like the BPT, nebular diagnostics,
                     and line profile shapes. I use many tools in these analyses, including PyNeb,
-                    MAPPINGS, CLOUDY, and a variety of numerical methods.
-                    To the right, I depict my own line profile model for galactic outflows as traced
-                    by the [O III] 5007 nebular emission line.<br>
+                    MAPPINGS, CLOUDY, and a variety of numerical methods. My research is novel in that
+                    I have developed new techniques for analyzing (i) ionized outflows traced by emission
+                    lines, (ii) "composite" or ambiguous emission line flux ratios, and (iii) very high
+                    ionization emission lines like He II 4686 and [Ne V] 3426. Such tools will be key to
+                    understanding the effects of AGN and young stellar populations on their host galaxies.
+                    To the right, I depict my own line profile model for galactic outflows
+                    as traced by the [O III] 5007 nebular emission line.<br>
                     With Ed, I also mentor Master's students and
                     directly assist with their final thesis projects.
                   </p>
@@ -158,6 +164,9 @@ https://templatemo.com/tm-531-reflux
                   <a href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
                   and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Dartmouth), as well as
                   rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).
+                  With this team, I use time series and multivariate statistical analysis tools to
+                  develop a novel method for gaining insight into the relationships between stellar
+                  structure and dynamos, which has strong implications for exoplanet habitability.
                   On the left, I show a variety of stellar activity indicators as a
                   function of the Rossby number Ro = rotation period / convective cycle time
                   to illustrate the empirical relationship between stellar structure, dynamos, and activity.
@@ -178,9 +187,14 @@ https://templatemo.com/tm-531-reflux
                   <a href="https://bv.fapesp.br/en/pesquisador/32467/oli-luiz-dors-junior">Oli Dors</a>
                   and others on the abundance patterns in nearby Seyfert galaxies,
                   including the temperature structure of the AGN narrow-line region
-                  and possible effects of shocks. To the right, I show BPT-VO flux ratio
-                  predictions based solely on chemical abundances and ion fractions for both AGN and star-forming galaxies
-                  (no photoionization models involved).
+                  and possible effects of shocks. Better understanding of the chemical abundances
+                  of the ISM in AGN will provide new and crucial evidence regarding the metal enrichment
+                  and baryonic in/outflow history in galaxies, including demonstrating whether AGN
+                  are in some way influencing or influenced by their host galaxies.
+                  <br>To the right, I illustrate a method for interpreting
+                  nebular emission line spectra by predicting BPT-VO flux ratios using chemical abundances
+                  and ion fractions for both AGN and star-forming galaxies (no photoionization models involved).
+                  For details on this sort of analysis, see <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.496.2191F/abstract">my paper</a>.
                 </p>
               </div>
             </div>
