--- a/teaching.html
+++ b/teaching.html
@@ -41,8 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate, University of
-              Massachusets</span>
+              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
@@ -102,6 +101,7 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
+        </section>
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
