--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@ https://templatemo.com/tm-531-reflux
                 <li><a href="./index.html">Research</a></li>
                 <li><a href="./teaching.html">Teaching</a></li>
                 <li><a href="./about.html">About Me</a></li>
+                <li><a href="./code.html">Coding</a></li>
                 <li><a href="./cv.html">CV</a></li>
               </ul>
             </nav>
@@ -62,7 +63,7 @@ https://templatemo.com/tm-531-reflux
         </div>
       </div>
 
-      <section class="section research" data-section="research">
+      <section class="section about" data-section="about">
         <div class="container">
           <div class="section-heading">
             <h2>About Me</h2>
