updated code header

--- a/code.html
+++ b/code.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-531-reflux
       <section class="section coding" data-section="coding">
         <div class="container">
           <div class="section-heading">
-            <h2>About Me</h2>
+            <h2>Coding Projects</h2>
             <div class="line-dec"></div>
             <span
               >
@@ -89,7 +89,9 @@ https://templatemo.com/tm-531-reflux
                 <p>
                   Calculates the "true" histogram or population
                   fraction (ratio of a subset to the total distribution) for a
-                  dataset by accounting for uncertainties in the data.
+                  dataset by accounting for uncertainties in the data. Each
+                  histogram bin is therefore treated as a Poisson binomial
+                  variate.
                 </p>
               </div>
             </div>
@@ -98,7 +100,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="second-service-icon service-icon"></div>
                 <h4><a href="https://github.com/sflury/kendall">kendall</a></h4>
                 <p>
-                  Calculates the non-parameteric correlation coefficient Kenall's
+                  Calculates the non-parameteric correlation coefficient Kendall's
                   tau, accounting for censoring (upper limits). Also includes
                   assessment of effects of outliers and uncertainties on the
                   correlation estimator by bootstrapping and Monte Carlo
@@ -126,7 +128,8 @@ https://templatemo.com/tm-531-reflux
                 <p>
                   Robust statistics of low count sources, including detection
                   probabilities, confidence intervals, and sampling of the
-                  highly non-Gaussian probability distributions.
+                  highly non-Gaussian probability distributions in cases where
+                  count signals are exceptionally faint.
                 </p>
               </div>
             </div>
