added OutLines to code

--- a/code.html
+++ b/code.html
@@ -84,7 +84,17 @@ https://templatemo.com/tm-531-reflux
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
-                <div class="first-service-icon service-icon"></div>
+                <h4><a href="https://github.com/sflury/OutLines">OutLines</a></h4>
+                <p>
+                  Calculates the emission or absorption line profiles arising
+                  from galactic outflows under the Sobolev approximation. Can be
+                  used for modeling observed spectral features or for predictive
+                  purposes.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
                 <h4><a href="https://github.com/sflury/histogram">histogram</a></h4>
                 <p>
                   Calculates the "true" histogram or population
@@ -97,7 +107,6 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="second-service-icon service-icon"></div>
                 <h4><a href="https://github.com/sflury/kendall">kendall</a></h4>
                 <p>
                   Calculates the non-parameteric correlation coefficient Kendall's
@@ -110,7 +119,6 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="third-service-icon service-icon"></div>
                 <h4><a href="https://github.com/sflury/redneb">redneb</a></h4>
                 <p>
                   Calculates nebular extinction from hydrogen
@@ -123,7 +131,6 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="fourth-service-icon service-icon"></div>
                 <h4><a href="https://github.com/sflury/feldcous">feldcous</a></h4>
                 <p>
                   Robust statistics of low count sources, including detection
