updates to code descriptions; inserted paper ref

--- a/code.html
+++ b/code.html
@@ -73,10 +73,11 @@ https://templatemo.com/tm-531-reflux
             <span
               >
               As an astronomer, I spend a lot of time programming. While not all
-              of my code is suitable for human consumption (i.e., not
-              documented), below are a few of the software packages I have
+              of my code is suitable for human consumption (i.e., not all is
+              documented), below are a few of the python scripts I have
               written for general use. Source code for these projects is
-              publicly available on <a href="https://github.com/sflury">my GitHub page</a>
+              publicly available on
+              <a href="https://github.com/sflury">my GitHub page</a>
               under the GNU/GPL v3.
               </span>
           </div>
@@ -86,10 +87,10 @@ https://templatemo.com/tm-531-reflux
               <div class="service-item">
                 <h4><a href="https://github.com/sflury/OutLines">OutLines</a></h4>
                 <p>
-                  Calculates the emission or absorption line profiles arising
-                  from galactic outflows under the Sobolev approximation. Can be
-                  used for modeling observed spectral features or for predictive
-                  purposes.
+                  Determines the emission and absorption line profiles arising
+                  from galactic outflows under the Sobolev approximation with no
+                  self absorption. Can be used for modeling observed spectral
+                  features or for predictive purposes.
                 </p>
               </div>
             </div>
@@ -97,7 +98,7 @@ https://templatemo.com/tm-531-reflux
               <div class="service-item">
                 <h4><a href="https://github.com/sflury/histogram">histogram</a></h4>
                 <p>
-                  Calculates the "true" histogram or population
+                  Solves for the "true" histogram or population
                   fraction (ratio of a subset to the total distribution) for a
                   dataset by accounting for uncertainties in the data. Each
                   histogram bin is therefore treated as a Poisson binomial
@@ -121,7 +122,7 @@ https://templatemo.com/tm-531-reflux
               <div class="service-item">
                 <h4><a href="https://github.com/sflury/redneb">redneb</a></h4>
                 <p>
-                  Calculates nebular extinction from hydrogen
+                  Derives nebular extinction from hydrogen
                   Balmer series emission lines, accounting for temperature and
                   density of the gas. Stellar absorption corrections are
                   optionally included in the solution but require equivalent
@@ -133,7 +134,7 @@ https://templatemo.com/tm-531-reflux
               <div class="service-item">
                 <h4><a href="https://github.com/sflury/feldcous">feldcous</a></h4>
                 <p>
-                  Robust statistics of low count sources, including detection
+                  Handles robust statistics of low count sources, including detection
                   probabilities, confidence intervals, and sampling of the
                   highly non-Gaussian probability distributions in cases where
                   count signals are exceptionally faint.
