--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ https://templatemo.com/tm-531-reflux
                     lines, (ii) "composite" or ambiguous emission line flux ratios, and (iii) very high
                     ionization emission lines like He II 4686 and [Ne V] 3426. Such tools will be key to
                     understanding the effects of AGN and young stellar populations on their host galaxies.
-                    To the right, I depict my own line profile model for galactic outflows
+                    To the right, I depict <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230804393F/abstract">my own line profile model for galactic outflows</a>
                     as traced by the [O III] 5007 nebular emission line.<br>
                     With Ed, I also mentor Master's students and
                     directly assist with their final thesis projects.
