Updated research descripts, added plots

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ https://templatemo.com/tm-531-reflux
               My research interests focus on the use of spectroscopy to investigate
               the relationship between a galaxy's ISM and energetic phenomena such as young
               stellar populations and AGN. I use rest-frame UV and optical spectroscopy from
-              JWST, HST, the SDSS, and other facilities to study line-emitting gas in local
-              (z<0.5) galaxies. Much of my analysis incorporates nebular diagnostics,
+              JWST, HST, the SDSS, and other facilities to study line-emitting nebular gas in
+              galaxies. Much of my analysis incorporates nebular diagnostics,
               photoionization models, and stellar population synthesis to infer fundamental
               properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
-              other galaxies. I collaborate with astronomers across the world, as a part of the
+              other galaxies. I collaborate with astronomers across the world, as a leader of the
               LzLCS team but also through connections made at international conferences and
               (soon) the VANDELS team.<br><br>Below, you can read about some
               specific projects on which I am actively working. A list of my recent publications
@@ -91,6 +91,10 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
+                  <img src="assets/images/lce_stacks.png" alt="" />
+                </div>
+                <br>
+                <div class="left-image">
                   <img src="assets/images/fescO32.png" alt="" />
                 </div>
               </div>
@@ -98,19 +102,20 @@ https://templatemo.com/tm-531-reflux
                 <div class="right-text">
                   <h4>Lyman Continuum Escape</h4>
                   <p>
-                    With <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>
-                    (Williams College), I am using a combination of
-                    UV spectroscopy with HST/COS
-                    (the <a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F/abstract">LzLCS</a>,
-                    <a href="https://archive.stsci.edu/proposal_search.php?mission=hst&id=15626">GO 15626</a>) and optical spectroscopy with
-                    SDSS to investigate the production and escape of ionizing photons in z~0.3
-                    low-mass star-forming galaxies. The LzLCS has fundamentally changed our
-                    understanding of Lyman continuum escape by providing a foundational
-                    reference sample spanning a very wide parameter space, allowing us to
-                    <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...930..126F/abstract">test Lyman
-                    continuum diagnostics (like O32 as shown on the left)</a> and to investigate the
+                    I am one of the leaders of the
+                    <a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F/abstract">Low-redshift Lyman Continuum Survey</a>,
+                    a large HST/COS program (PI <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>)
+                    aimed at measuring the Lyman continuum (LyC) in the largest sample of z~0.3 galaxies to date.
+                    Through my role in the LzLCS, I have fundamentally changed our
+                    understanding of Lyman continuum escape by (i) providing a foundational
+                    reference sample spanning a very wide parameter space, (ii)
+                    <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...930..126F/abstract">testing Lyman
+                    continuum diagnostics (like O32 as shown on the left)</a>, and (iii) to investigate the
                     underlying mechanisms of ionizing photon escape. These results are critical to
                     providing empirical constraints on the origins and mechanisms of cosmic Reionization.
+                    Direct observations of LyC escape at z>6 are not physically possible; making
+                    my results from the LzLCS the primary basis
+                    by which we can empirically assess the physical origins of cosmic Reionizaiton.
                   </p>
                 </div>
               </div>
@@ -122,8 +127,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="left-text">
                   <h4>AGN and Star Formation in Low-mass Galaxies</h4>
                   <p>
-                    With <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University), I am using IFU,
-                    SDSS, and long-slit spectroscopy to investigate the relationships between AGN,
+                    I use IFU, SDSS, and long-slit spectroscopy to investigate the relationships between AGN,
                     star formation, and their host galaxies by analyzing the nebular emission line
                     properties, including flux ratio diagnostics like the BPT, nebular diagnostics,
                     and line profile shapes. I use many tools in these analyses, including PyNeb,
@@ -132,16 +136,24 @@ https://templatemo.com/tm-531-reflux
                     lines, (ii) "composite" or ambiguous emission line flux ratios, and (iii) very high
                     ionization emission lines like He II 4686 and [Ne V] 3426. Such tools will be key to
                     understanding the effects of AGN and young stellar populations on their host galaxies.
-                    To the right, I depict <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230804393F/abstract">my own line profile model for galactic outflows</a>
-                    as traced by the [O III] 5007 nebular emission line.<br>
-                    With Ed, I also mentor Master's students and
-                    directly assist with their final thesis projects.
+                    My spectroscopic studies of line-emitting galaxies establish the tools and
+                    physical insight necessary to understand the effects that AGN and star formation have
+                    on one another and, ultimately, the history and future of their host galaxies.
+                    Here, I depict <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230804393F/abstract">my own line profile model for galactic outflows</a>
+                    as traced by the [O III] 5007 nebular emission line and a comparison of ionizing SEDs from an upcoming paper by a mentee.<br>
+                    For these projects, I collaborate with
+                    <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University),
+                    with whom I also mentor Master's students and directly assist with their final thesis projects.
                   </p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/outflowO3.png" alt="" />
+                  <img src="assets/images/outflowO3.png" alt="[O III] outflow line profile" />
+                </div>
+                <br>
+                <div class="right-image">
+                  <img src="assets/images/ion_sed.png" alt="Ionizing SED models with ionization potentials" />
                 </div>
               </div>
             </div>
@@ -152,7 +164,11 @@ https://templatemo.com/tm-531-reflux
           <div class="row">
             <div class="col-md-6">
               <div class="left-image">
-                <img src="assets/images/LowMassSat.png" alt="" />
+                <img src="assets/images/LowMassSat.png" alt="Magnetic activity indicator vs Rossby number" />
+              </div>
+              <br>
+              <div class="left-image">
+                <img src="assets/images/lightcurve.png" alt="Time series analysis of a low mass star observed with TESS" />
               </div>
             </div>
             <div class="col-md-6">
@@ -169,9 +185,14 @@ https://templatemo.com/tm-531-reflux
                   With this team, I use time series and multivariate statistical analysis tools to
                   develop a novel method for gaining insight into the relationships between stellar
                   structure and dynamos, which has strong implications for exoplanet habitability.
-                  On the left, I show a variety of stellar activity indicators as a
+                  Specifically, constraining the mass at which stellar activity due to dynamos and
+                  interior structure will determine the mass regime in which exoplanets are too
+                  irradiated by stellar radiation to support life.
+                  Here, I show a variety of stellar activity indicators as a
                   function of the Rossby number Ro = rotation period / convective cycle time
                   to illustrate the empirical relationship between stellar structure, dynamos, and activity.
+                  Also depicted is a demonstration of various time series analysis tools used to
+                  measure stellar rotation, a key indicator of magnetic activity.
                 </p>
               </div>
             </div>
