--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@ https://templatemo.com/tm-531-reflux
                 <p>
                   I bake bread. I enjoy the feeling of kneading dough, of seeing various pre-ferments and
                   combinations of yeast, flour, salt, and water produce such wonderfully different
-                  flavors and textures. Favorites to bake include focaccia and pain de compagne.
+                  flavors and textures. Favorites to bake include focaccia, challah, and pain de compagne.
                 </p>
               </div>
             </div>
